apps/shlink/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shlink
  labels:
    enable-reloader-operator-watching: "true"
