apps/shlink/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shlink-httproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-https-gateway
      namespace: istio-system
  hostnames:
    - s.home.alden.ai
  rules:
  - backendRefs:
    - name: shlink
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shlink-web-client-httproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-https-gateway
      namespace: istio-system
  hostnames:
    - shlink.home.alden.ai
  rules:
  - backendRefs:
    - name: shlink-web-client
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
